// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render block in selection mode selected 1`] = `
<DocumentFragment>
  <div>
    Test for Test Content and type type2
  </div>
</DocumentFragment>
`;

exports[`Render block in selection mode unselected 1`] = `
<DocumentFragment>
  <div>
    Test for Test Content and type type2
  </div>
</DocumentFragment>
`;

exports[`Render collapsed sortable block 1`] = `
<DocumentFragment>
  <div />
</DocumentFragment>
`;

exports[`Render expanded sortable, non-collapsable block with types 1`] = `
<DocumentFragment>
  <div>
    Test for Test Content and type type2
  </div>
</DocumentFragment>
`;
